@@ -79,7 +79,7 @@ mkdir build1
 cd build1
 ../src/configure
 # "$MAKE -n" is for debugging, should highlight any VPATH rewrite.
-$MAKE -n check
+$MAKE -n check || :
 $MAKE check
 cd ..
 
@@ -87,7 +87,7 @@ mkdir build2
 cd build2
 "$ocwd"/src/configure
 # "$MAKE -n" is for debugging, should highlight any VPATH rewrite.
-$MAKE -n check
+$MAKE -n check || :
 $MAKE check
 cd ..
 
