@@ -1,5 +1,13 @@
 2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: fix two spurious failures on Solaris make
+	* tests/tests-environment-and-log-compiler.test: Do not fail if
+	"make -n check" fails, as that is issued only for debugging, its
+	semantics being tested in other test scripts.
+	* tests/test-driver-strip-vpath.test: Likewise.
+
+2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tap driver: refactor and remove dead code
 	* lib/tap-driver (get_tap_line): Removed, ...
 	(all callers): ... updated to use $parser->next directly instead.
